@@ -1,3 +1,14 @@
+2006-03-29 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* include/Partition.h,
+	  src/Partition.cc: added set_used() and operator!=
+	* src/Dialog_Partition_Copy.cc,
+	  src/GParted_Core.cc,
+	  src/OperationCopy.cc,
+	  src/Win_GParted.cc: it's now possible to copy from partition to
+	  partition. (before this it was only possible to copy to unallocated
+	  space)
+
 2006-03-28 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* include/GParted_Core.h,
